--- a/manual/emacspeak_002dkeymap.html
+++ b/manual/emacspeak_002dkeymap.html
@@ -140,7 +140,7 @@
           emacspeak-amark-browse) (b eww-list-buffers) (c
           browse-url-chrome) (d magit-dispatch) (e gmaps) (f
           magit-file-dispatch) (g gnus) (h
-          emacspeak-m-player-from-history) (k
+          emacspeak-m-player-from-history) (i ibuffer) (k
           emacspeak-google-knowledge-search) (l locate) (m vm) (n
           emacspeak-wizards-cycle-to-next-buffer) (o find-file) (p
           emacspeak-wizards-cycle-to-previous-buffer) (r
