--- a/manual/Emacspeak-Keybindings-On-emacspeak_002dhyper_002dkeymap.html
+++ b/manual/Emacspeak-Keybindings-On-emacspeak_002dhyper_002dkeymap.html
@@ -174,6 +174,10 @@
       <dd>
         <p>emacspeak-m-player-from-history</p>
       </dd>
+      <dt><span><kbd>i</kbd></span></dt>
+      <dd>
+        <p>ibuffer</p>
+      </dd>
       <dt><span><kbd>k</kbd></span></dt>
       <dd>
         <p>emacspeak-google-knowledge-search</p>
