--- a/manual/Emacspeak-Keybindings-On-emacspeak_002dsuper_002dkeymap.html
+++ b/manual/Emacspeak-Keybindings-On-emacspeak_002dsuper_002dkeymap.html
@@ -92,7 +92,7 @@
       </dd>
       <dt><span><kbd>SPC</kbd></span></dt>
       <dd>
-        <p>emacspeak-wizards-scratch</p>
+        <p>scratch-buffer</p>
       </dd>
       <dt><span><kbd>a</kbd></span></dt>
       <dd>
