--- a/manual/emacspeak_002dkeymap.html
+++ b/manual/emacspeak_002dkeymap.html
@@ -218,8 +218,7 @@
           Default Value: @code{@verb{|((.
           emacspeak-wizards-shell-directory-reset) (C-n
           emacspeak-wizards-google-headlines) (R
-          emacspeak-webspace-feed-reader) (SPC
-          emacspeak-wizards-scratch) (a
+          emacspeak-webspace-feed-reader) (SPC scratch-buffer) (a
           emacspeak-wizards-execute-asynchronously) (c calculator)
           (d emacspeak-dired-downloads) (e elfeed) (h
           emacspeak-org-capture-link) (l
