--- a/manual/emacspeak_002deww.html
+++ b/manual/emacspeak_002deww.html
@@ -393,8 +393,8 @@
         </dd>
         <dt><span><kbd>y</kbd></span></dt>
         <dd>
-          <p><code>emacspeak-m-player-youtube-player</code> Play
-          link under point as a Youtube stream.</p>
+          <p><code>emacspeak-mpv-play-url</code> Play link under
+          point as a Youtube stream.</p>
         </dd>
       </dl>
     </div>
