--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -1415,7 +1415,6 @@ A               emacspeak-m-player-amark-add
 C               emacspeak-m-player-clear-filters
 E               emacspeak-m-player-add-equalizer
 G               emacspeak-m-player-seek-percentage
-L               emacspeak-m-player-locate-media
 M               emacspeak-m-player-display-metadata
 O               emacspeak-m-player-reset-options
 P               emacspeak-m-player-apply-reverb-preset
@@ -1426,7 +1425,6 @@ S               emacspeak-m-player-amark-save
 \               emacspeak-m-player-persist-process
 ]               emacspeak-m-player-faster
 a               emacspeak-m-player-add-autopan
-b               emacspeak-wizards-view-buffers-filtered-by-m-player-mode
 c               emacspeak-m-player-slave-command
 d               emacspeak-m-player-delete-filter
 e               emacspeak-m-player-equalizer-preset
@@ -1440,7 +1438,6 @@ m               emacspeak-m-player-mode-line
 n               emacspeak-m-player-next-track
 o               emacspeak-m-player-customize-options
 p               emacspeak-m-player-previous-track
-q               bury-buffer
 r               emacspeak-m-player-seek-relative
 s               emacspeak-m-player-scale-speed
 t               emacspeak-m-player-play-tracks-jump
@@ -1463,11 +1460,10 @@ DEL             emacspeak-m-player-reset-speed
 
 M-,             emacspeak-m-player-set-clip-start
 M-.             emacspeak-m-player-set-clip-end
-M-l             emacspeak-m-player-load-playlist
 
-In addition to any hooks its parent mode ‘comint-mode’ might have run,
-this mode runs the hook ‘emacspeak-m-player-mode-hook’, as the final
-or penultimate step during initialization.
+In addition to any hooks its parent mode ‘special-mode’ might have
+run, this mode runs the hook ‘emacspeak-m-player-mode-hook’, as the
+final or penultimate step during initialization.
 </pre>
             </div>
           </dd>
@@ -2452,7 +2448,6 @@ A               emacspeak-m-player-amark-add
 C               emacspeak-m-player-clear-filters
 E               emacspeak-m-player-add-equalizer
 G               emacspeak-m-player-seek-percentage
-L               emacspeak-m-player-locate-media
 M               emacspeak-m-player-display-metadata
 O               emacspeak-m-player-reset-options
 P               emacspeak-m-player-apply-reverb-preset
@@ -2463,7 +2458,6 @@ S               emacspeak-m-player-amark-save
 \               emacspeak-m-player-persist-process
 ]               emacspeak-m-player-faster
 a               emacspeak-m-player-add-autopan
-b               emacspeak-wizards-view-buffers-filtered-by-m-player-mode
 c               emacspeak-m-player-slave-command
 d               emacspeak-m-player-delete-filter
 e               emacspeak-m-player-equalizer-preset
@@ -2477,7 +2471,6 @@ m               emacspeak-m-player-mode-line
 n               emacspeak-m-player-next-track
 o               emacspeak-m-player-customize-options
 p               emacspeak-m-player-previous-track
-q               bury-buffer
 r               emacspeak-m-player-seek-relative
 s               emacspeak-m-player-scale-speed
 t               emacspeak-m-player-play-tracks-jump
@@ -2500,7 +2493,6 @@ DEL             emacspeak-m-player-reset-speed
 
 M-,             emacspeak-m-player-set-clip-start
 M-.             emacspeak-m-player-set-clip-end
-M-l             emacspeak-m-player-load-playlist
 .
 </pre>
             </div>
