--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -1430,6 +1430,7 @@ d               emacspeak-m-player-delete-filter
 e               emacspeak-m-player-equalizer-preset
 f               emacspeak-m-player-add-filter
 g               emacspeak-m-player-seek-absolute
+h               emacspeak-m-player-from-history
 i               emacspeak-m-player-stream-info
 j               emacspeak-m-player-amark-jump
 k               emacspeak-m-player-quit
@@ -2463,6 +2464,7 @@ d               emacspeak-m-player-delete-filter
 e               emacspeak-m-player-equalizer-preset
 f               emacspeak-m-player-add-filter
 g               emacspeak-m-player-seek-absolute
+h               emacspeak-m-player-from-history
 i               emacspeak-m-player-stream-info
 j               emacspeak-m-player-amark-jump
 k               emacspeak-m-player-quit
