--- a/manual/Web-Browsing.html
+++ b/manual/Web-Browsing.html
@@ -73,7 +73,9 @@
     http://emacspeak.blogspot.com/2014/05/emacspeak-eww-updates-for-complete.html</a>
     and in See <a href="emacspeak_002deww.html">emacspeak-eww</a>.
     For Emacs 24.4 and later, note that the built-in Web browser
-    EWW is also the browser of choice for emacspeak.</p>
+    EWW is also the browser of choice for emacspeak. Finally, note
+    that Emacs/W3 is now considered obsolete, and Emacspeak support
+    for w3m is no longer maintained.</p>
     <p>— T. V. Raman, October 2014.</p>
     <p>This document, “The State of Web Browsing in Emacspeak”
     describes the primary web browsers in use under emacspeak and
