--- a/manual/Emacspeak-Keybindings-On-emacspeak_002dsuper_002dkeymap.html
+++ b/manual/Emacspeak-Keybindings-On-emacspeak_002dsuper_002dkeymap.html
@@ -146,6 +146,10 @@
       <dd>
         <p>soundscape-update-mood</p>
       </dd>
+      <dt><span><kbd>y</kbd></span></dt>
+      <dd>
+        <p>emacspeak-mpv-play-url</p>
+      </dd>
     </dl>
   </div>
 </body>
