--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -2948,6 +2948,15 @@
       <tr>
         <td></td>
         <td valign="top"><a href=
+        "emacspeak_002dmpv.html#index-C_002d_002e-y"><code>C-.
+        y</code></a>:</td>
+        <td>&nbsp;</td>
+        <td valign="top"><a href=
+        "emacspeak_002dmpv.html">emacspeak-mpv</a></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td valign="top"><a href=
         "emacspeak_002dmuggles.html#index-C_002d_002f"><code>C-/</code></a>:</td>
         <td>&nbsp;</td>
         <td valign="top"><a href=
@@ -6655,6 +6664,15 @@
         <td>&nbsp;</td>
         <td valign="top"><a href=
         "extra_002dmuggles.html">extra-muggles</a></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td valign="top"><a href=
+        "emacspeak_002dmpv.html#index-C_002dx-_0040-s-y"><code>C-x
+        @ s y</code></a>:</td>
+        <td>&nbsp;</td>
+        <td valign="top"><a href=
+        "emacspeak_002dmpv.html">emacspeak-mpv</a></td>
       </tr>
       <tr>
         <td></td>
