--- a/manual/emacspeak_002dinfo.html
+++ b/manual/emacspeak_002dinfo.html
@@ -204,7 +204,7 @@ node-spec.
           <p>Specifies how much of the selected node gets spoken.
           Possible values are: screenfull – speak the displayed
           screen node – speak the entire node.</p>
-          <p>Default Value: <code><tt>node</tt></code></p>
+          <p>Default Value: <code><tt>screenfull</tt></code></p>
         </dd>
       </dl>
     </div>
