--- a/manual/emacspeak_002dkeymap.html
+++ b/manual/emacspeak_002dkeymap.html
@@ -226,7 +226,8 @@
           emacspeak-wizards-view-buffers-filtered-by-this-mode) (n
           emacspeak-wizards-google-news) (p proced) (r
           soundscape-restart) (s soundscape) (t soundscape-toggle)
-          (u soundscape-update-mood))</tt></code></p>
+          (u soundscape-update-mood) (y
+          emacspeak-mpv-play-url))</tt></code></p>
         </dd>
       </dl>
       <dl class="def">
