--- a/manual/emacspeak_002dmpv.html
+++ b/manual/emacspeak_002dmpv.html
@@ -99,6 +99,9 @@
           'copiable-anchor'>¶</a></span></dt>
           <dd>
             <dl compact="compact">
+              <dt id='index-C_002d_002e-y'><span><kbd>C-. y</kbd>
+              <a href='#index-C_002d_002e-y' class=
+              'copiable-anchor'>¶</a></span></dt>
               <dt id='index-C_002de-C_002d_003b-_003b'>
               <span><kbd>C-e C-; ;</kbd> <a href=
               '#index-C_002de-C_002d_003b-_003b' class=
@@ -106,6 +109,9 @@
               <dt id='index-_003cfn_003e-C_002d_003b-_003b'>
               <span><kbd>&lt;fn&gt; C-; ;</kbd> <a href=
               '#index-_003cfn_003e-C_002d_003b-_003b' class=
+              'copiable-anchor'>¶</a></span></dt>
+              <dt id='index-C_002dx-_0040-s-y'><span><kbd>C-x @ s
+              y</kbd> <a href='#index-C_002dx-_0040-s-y' class=
               'copiable-anchor'>¶</a></span></dt>
             </dl><span id=
             "index-emacspeak_002dmpv_002dplay_002durl-1"></span>
