--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -91,13 +91,20 @@
       keystrokes in the <code>*M-Player*</code> buffer.
       Alternatively, you can switch away from that buffer to do
       real work, And invoke <code>m-player</code> commands by first
-      pressing <kbd>C-e ;</kbd>. As an example, pressing
-      <kbd>v</kbd> in the <code>*M-Player*</code> buffer prompts
-      for and sets the volume; When not in the
-      <code>*M-Player*</code> buffer, you can achieve the same by
-      pressing <kbd>C-e ; v</kbd>. Press <kbd>C-h b</kbd> in the
-      <code>*M-Player*</code> buffer to list <code>m-player</code>
-      keybindings.</p>
+      pressing <kbd>C-e ;</kbd>. If your Emacs supports
+      <code>repeat-mode</code>, — See <a data-manual="emacs" href=
+      "https://www.gnu.org/software/emacs/manual/html_node/emacs/repeating.html#repeating">
+      (emacs)repeating</a> you can avoid the need to press
+      <code>C-e</code> each time; with <code>repeat-mode</code>
+      active, you only need to press the prefix <code>C-e ;</code>
+      the first time; subsequent invocations can happen via
+      single-letter presses as long as they are performed in a
+      sequence. As an example, pressing <kbd>v</kbd> in the
+      <code>*M-Player*</code> buffer prompts for and sets the
+      volume; When not in the <code>*M-Player*</code> buffer, you
+      can achieve the same by pressing <kbd>C-e ; v</kbd>. Press
+      <kbd>C-h b</kbd> in the <code>*M-Player*</code> buffer to
+      list <code>m-player</code> keybindings.</p>
     </div>
     <div class="subsection" id=
     "Emacspeak_002dM_002dPlayer-Commands">
@@ -2495,7 +2502,7 @@ DEL             emacspeak-m-player-reset-speed
 
 M-,             emacspeak-m-player-set-clip-start
 M-.             emacspeak-m-player-set-clip-end
-.
+
 </pre>
             </div>
           </dd>
