--- a/manual/index.html
+++ b/manual/index.html
@@ -904,11 +904,17 @@
                       name=
                       "toc-emacspeak_002damark_002dfind">12.12.1.3
                       emacspeak-amark-find</a></li>
+                      <li><a id="toc-emacspeak_002damark_002dmode"
+                      href=
+                      "emacspeak_002damark.html#emacspeak_002damark_002dmode"
+                      name=
+                      "toc-emacspeak_002damark_002dmode">12.12.1.4
+                      emacspeak-amark-mode</a></li>
                       <li><a id="toc-emacspeak_002damark_002dsave"
                       href=
                       "emacspeak_002damark.html#emacspeak_002damark_002dsave"
                       name=
-                      "toc-emacspeak_002damark_002dsave">12.12.1.4
+                      "toc-emacspeak_002damark_002dsave">12.12.1.5
                       emacspeak-amark-save</a></li>
                     </ul>
                   </li>
