--- a/announcements/rich-notes-for-smart-learning.html
+++ b/announcements/rich-notes-for-smart-learning.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-10-14 Fri 08:40 -->
+<!-- 2022-10-14 Fri 08:54 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Learn Smarter By Taking Rich, Hypertext Notes</title>
@@ -197,8 +197,8 @@
 <body>
 <div id="content" class="content">
 <h1 class="title">Learn Smarter By Taking Rich, Hypertext Notes</h1>
-<div id="outline-container-org77507eb" class="outline-2">
-<h2 id="org77507eb"><span class="section-number-2">1.</span> Background</h2>
+<div id="outline-container-org309a39d" class="outline-2">
+<h2 id="org309a39d"><span class="section-number-2">1.</span> Background</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 As a student, I learnt to take <a href="https://www.cs.cornell.edu/info/people/raman/phd-thesis/html/root-thesis.html">notes in Braille</a> while in class and
@@ -219,8 +219,8 @@ article summarizes the present state of what I use at present.
 </div>
 </div>
 
-<div id="outline-container-org747ee7c" class="outline-2">
-<h2 id="org747ee7c"><span class="section-number-2">2.</span> Use Case Requirements</h2>
+<div id="outline-container-org1f47b52" class="outline-2">
+<h2 id="org1f47b52"><span class="section-number-2">2.</span> Use Case Requirements</h2>
 <div class="outline-text-2" id="text-2">
 <ol class="org-ol">
 <li>All of the following should work equally well for locally stored
@@ -248,45 +248,62 @@ being
 </div>
 </div>
 
-<div id="outline-container-org2ce1a25" class="outline-2">
-<h2 id="org2ce1a25"><span class="section-number-2">3.</span> User Experience</h2>
+<div id="outline-container-org13e59b6" class="outline-2">
+<h2 id="org13e59b6"><span class="section-number-2">3.</span> User Experience</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-org0d9ee75" class="outline-3">
-<h3 id="org0d9ee75"><span class="section-number-3">3.1.</span> Create And Browse Bookmarks In EBooks</h3>
-</div>
-
-<div id="outline-container-org552b260" class="outline-3">
-<h3 id="org552b260"><span class="section-number-3">3.2.</span> Create And Browse AMarks In Audio Books</h3>
-</div>
-
-<div id="outline-container-org912b42f" class="outline-3">
-<h3 id="org912b42f"><span class="section-number-3">3.3.</span> Create Bookmarks  On Web Pages</h3>
-</div>
-
-<div id="outline-container-org5ac8736" class="outline-3">
-<h3 id="org5ac8736"><span class="section-number-3">3.4.</span> Create Audio Bookmarks In Podcasts</h3>
-</div>
-
-<div id="outline-container-org2f5db7a" class="outline-3">
-<h3 id="org2f5db7a"><span class="section-number-3">3.5.</span> Create On-Line Notes Using Org-Mode</h3>
-</div>
-
-<div id="outline-container-org45780a4" class="outline-3">
-<h3 id="org45780a4"><span class="section-number-3">3.6.</span> Insert Hyperlinks To EBooks And Audio In Org-Mode</h3>
-</div>
-
-<div id="outline-container-orgd0a30ea" class="outline-3">
-<h3 id="orgd0a30ea"><span class="section-number-3">3.7.</span> Review Notes, Follow Hyperlinks To Review Original Material</h3>
+<div id="outline-container-orgac8fc90" class="outline-3">
+<h3 id="orgac8fc90"><span class="section-number-3">3.1.</span> Create And Browse Bookmarks In EBooks</h3>
+<div class="outline-text-3" id="text-3-1">
+<p>
+See<a href="https://tvraman.github.io/emacspeak/manual/emacspeak_002dbookmark.html">Emacspeak Bookmarks</a>, <a href="https://tvraman.github.io/emacspeak/manual/emacspeak_002dbookshare.html">Emacspeak Bookshare</a>, and <a href="https://tvraman.github.io/emacspeak/manual/emacspeak_002depub.html">Emacspeak EPub</a> for
+relevant sections of the user manual.
+</p>
 </div>
 </div>
 
-<div id="outline-container-org7190536" class="outline-2">
-<h2 id="org7190536"><span class="section-number-2">4.</span> Software Components That Enable This Experience</h2>
+<div id="outline-container-orge5106e6" class="outline-3">
+<h3 id="orge5106e6"><span class="section-number-3">3.2.</span> Create And Browse AMarks In Audio Books</h3>
+<div class="outline-text-3" id="text-3-2">
+<p>
+See <a href="https://tvraman.github.io/emacspeak/manual/emacspeak_002damark.html">Emacspeak Amarks</a> for the user manual.
+</p>
+</div>
 </div>
 
-<div id="outline-container-org94f70ee" class="outline-2">
-<h2 id="org94f70ee"><span class="section-number-2">5.</span> Conclusion: Looking Back, Looking Forward</h2>
+
+<div id="outline-container-org3a7f83e" class="outline-3">
+<h3 id="org3a7f83e"><span class="section-number-3">3.3.</span> Create Bookmarks  On Web Pages</h3>
+<div class="outline-text-3" id="text-3-3">
+<p>
+See module <code>org-capture</code> for inspiration.
+</p>
+</div>
+</div>
+
+<div id="outline-container-org7415510" class="outline-3">
+<h3 id="org7415510"><span class="section-number-3">3.4.</span> Create Audio Bookmarks In Podcasts</h3>
+</div>
+
+<div id="outline-container-org1b6bf8e" class="outline-3">
+<h3 id="org1b6bf8e"><span class="section-number-3">3.5.</span> Create On-Line Notes Using Org-Mode</h3>
+</div>
+
+<div id="outline-container-org280ee01" class="outline-3">
+<h3 id="org280ee01"><span class="section-number-3">3.6.</span> Insert Hyperlinks To EBooks And Audio In Org-Mode</h3>
+</div>
+
+<div id="outline-container-orgbff4eee" class="outline-3">
+<h3 id="orgbff4eee"><span class="section-number-3">3.7.</span> Review Notes, Follow Hyperlinks To Review Original Material</h3>
+</div>
+</div>
+
+<div id="outline-container-org62ed388" class="outline-2">
+<h2 id="org62ed388"><span class="section-number-2">4.</span> Software Components That Enable This Experience</h2>
+</div>
+
+<div id="outline-container-org8615e5a" class="outline-2">
+<h2 id="org8615e5a"><span class="section-number-2">5.</span> Conclusion: Looking Back, Looking Forward</h2>
 <div class="outline-text-2" id="text-5">
 </div>
 </div>
@@ -294,7 +311,7 @@ being
 <div id="postamble" class="status">
 <p class="date">Date: 2022-10-14 Fri 00:00</p>
 <p class="author">Author: T.V Raman</p>
-<p class="date">Created: 2022-10-14 Fri 08:40</p>
+<p class="date">Created: 2022-10-14 Fri 08:54</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
